Add simple countdown

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,7 @@
   </p>
 <% end %>
 
+<%= render partial: 'countdown' %>
 <%= render partial: 'issues' %>
 <%= render partial: 'leaderboard' %>
 <hr class="soften">
